# cmus-control

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG-v1.md  CHANGELOG-v2.md  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  build.zig  cmus-control.rb  cmus-control.sublime-project
.github/workflows/: zig.yml
skel/: at.fox21.cmuscontrold.plist  cmus-control.rb
src/: CCApplication.h  CCApplication.m  basic.h  config.h.in  main copy.m  main.h  main.m  main.zig
src/classes/: CCApplication.h  CCApplication.m
